--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 
         <!-- Start todos -->
         <header>
-          <h1>Todos</h1>
+          <h1>Bike Operandi</h1>
         </header>
         <div id="container"></div>
         <a class="github" href="https://github.com/justinpetersen/bike-operandi"><img src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
