Removed default first slide so all slides are being added dynamically

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,6 @@
             <div class="container">
                 <div class="carousel-caption">
                     <h1><%= title %></h1>
-                    <p class="lead">Just turns the Twitter Bootstrap Carousel in fullscreen mode, and scale to fit the screen resolution</p>
                 </div>
             </div>
         </script>
@@ -38,17 +37,7 @@
             </ol>
 
             <!-- Wrapper for slides -->
-            <div class="carousel-inner" id="container">
-                <div class="item active">
-                    <img src="http://24.media.tumblr.com/faaca900752ea4189be5730d1ad080c5/tumblr_n5p5cd5HAk1taj746o1_1280.jpg" alt="" />
-                    <div class="container">
-                        <div class="carousel-caption">
-                            <h1>Bootstrap Carousel Fullscreen</h1>
-                            <p class="lead">Just turns the Twitter Bootstrap Carousel in fullscreen mode, and scale to fit the screen resolution</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="carousel-inner" id="container"></div>
 
             <!-- Controls -->
             <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
