Added hotspots ot DOM

--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,8 @@
             <a class="right carousel-control" href="#bike-carousel" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-right"></span>
             </a>
+
+            <div id="bike-hotspots" class="hotspots"></div>
         </div>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
