--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
             </a>
 
             <div id="bike-hotspots" class="hotspots"></div>
+            <div id="bike-popovers" class="popovers"></div>
         </div>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
