Cleaned up carousel code

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,71 @@
 
         <div id="main-container"></div>
 
+        <div id="thumbnails-container" class="container">
+            <div class="row">
+                <div class="col-lg-3 col-sm-4 col-xs-6">
+                    <a href="#" class="thumbnail">
+                         <img src="http://24.media.tumblr.com/faaca900752ea4189be5730d1ad080c5/tumblr_n5p5cd5HAk1taj746o1_1280.jpg" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6">
+                    <a href="#" class="thumbnail">
+                         <img src="http://31.media.tumblr.com/f07f7aad9089522c92f70ff1d29be33b/tumblr_n5ncnwGbRb1taj746o1_1280.jpg" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6">
+                    <a href="#" class="thumbnail">
+                         <img src="http://37.media.tumblr.com/61b53596a0be4b18834f8c581931c049/tumblr_n5wk6lTk1j1taj746o1_1280.jpg" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6">
+                    <a href="#" class="thumbnail pull-left">
+                         <img src="http://24.media.tumblr.com/faaca900752ea4189be5730d1ad080c5/tumblr_n5p5cd5HAk1taj746o1_1280.jpg" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6">
+                    <a href="#" class="thumbnail">
+                         <img src="http://31.media.tumblr.com/f07f7aad9089522c92f70ff1d29be33b/tumblr_n5ncnwGbRb1taj746o1_1280.jpg" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6">
+                    <a href="#" class="thumbnail">
+                         <img src="http://37.media.tumblr.com/61b53596a0be4b18834f8c581931c049/tumblr_n5wk6lTk1j1taj746o1_1280.jpg" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6">
+                    <a href="#" class="thumbnail">
+                         <img src="http://24.media.tumblr.com/faaca900752ea4189be5730d1ad080c5/tumblr_n5p5cd5HAk1taj746o1_1280.jpg" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6">
+                    <a href="#" class="thumbnail">
+                         <img src="http://31.media.tumblr.com/f07f7aad9089522c92f70ff1d29be33b/tumblr_n5ncnwGbRb1taj746o1_1280.jpg" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6">
+                    <a href="#" class="thumbnail">
+                         <img src="http://37.media.tumblr.com/61b53596a0be4b18834f8c581931c049/tumblr_n5wk6lTk1j1taj746o1_1280.jpg" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6">
+                    <a href="#" class="thumbnail">
+                         <img src="http://24.media.tumblr.com/faaca900752ea4189be5730d1ad080c5/tumblr_n5p5cd5HAk1taj746o1_1280.jpg" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6">
+                    <a href="#" class="thumbnail">
+                         <img src="http://31.media.tumblr.com/f07f7aad9089522c92f70ff1d29be33b/tumblr_n5ncnwGbRb1taj746o1_1280.jpg" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-lg-3 col-sm-4 col-xs-6">
+                    <a href="#" class="thumbnail">
+                         <img src="http://37.media.tumblr.com/61b53596a0be4b18834f8c581931c049/tumblr_n5wk6lTk1j1taj746o1_1280.jpg" class="img-responsive">
+                    </a>
+                </div>
+            </div>
+        </div>
+
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
