--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
             </div>
         </div>
 
+        <div id="modal-container"></div>
         <div id="main-container"></div>
         <div id="content-container"><div>
 
