Displaying parts section and style updates to main carousel

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 
         <div id="modal-container"></div>
         <div id="nav-container"></div>
-        <div id="main-container"></div>
+        <div id="hero-container"></div>
         <div id="content-container"><div>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
