--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
         <div id="modal-container"></div>
         <div id="nav-container"></div>
         <div id="hero-container"></div>
-        <div id="content-container"><div>
+        <div id="content-container" class="container"><div>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
