--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div id="modal-container"></div>
+        <div id="modal-container" class="container"></div>
         <div id="nav-container"></div>
         <div id="hero-container"></div>
         <div id="content-container" class="container"><div>
